[gd_scene load_steps=10 format=3 uid="uid://cfvfs2jhc66ra"]

[ext_resource type="Script" path="res://HugoLeBo/UI_Menus/main_menu.gd" id="1_o3vmd"]
[ext_resource type="Texture2D" uid="uid://x7538hbs0j42" path="res://HugoLeBo/UI_Menus/main_menu.png" id="1_oe0lj"]
[ext_resource type="FontFile" uid="uid://b8i5ovcrke3e" path="res://HugoLeBo/UI_Menus/PlayfulTime-BLBB8.ttf" id="2_o5ow0"]
[ext_resource type="AudioStream" uid="uid://ctx0djew58i1k" path="res://HugoLeBo/UI_Menus/bubbles_A#_major.wav" id="4_e00l3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8yhja"]
texture = ExtResource("1_oe0lj")
modulate_color = Color(0.572988, 0.572988, 0.572988, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ge4tq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mr4ol"]
bg_color = Color(0.207333, 0.550328, 0.80987, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qeaj2"]
bg_color = Color(0.100394, 0.361504, 0.551609, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5oiw7"]
bg_color = Color(0.291206, 0.627957, 0.893409, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 2

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3vmd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -181.0
offset_right = 319.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8yhja")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_right = 87.5
offset_bottom = 114.0
grow_horizontal = 2
theme_override_constants/separation = 8

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ge4tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4ol")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qeaj2")
theme_override_styles/normal = SubResource("StyleBoxFlat_5oiw7")
text = "start DA GAME"

[node name="ParametersButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ge4tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4ol")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qeaj2")
theme_override_styles/normal = SubResource("StyleBoxFlat_5oiw7")
text = "Parameters"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_ge4tq")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4ol")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qeaj2")
theme_override_styles/normal = SubResource("StyleBoxFlat_5oiw7")
text = "RageQuit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -69.0
offset_right = 199.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_o5ow0")
theme_override_font_sizes/font_size = 28
text = "IS THERE A SHRIMP IN THE BOAT ?!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e00l3")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ParametersButton" to="." method="_on_parameters_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
